--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,9 @@
 site_name: MkDocs Demo Site
 
-nav: 
+nav:
   - Home: index.md
   - About: about.md
-  - Contact: contact.md 
+  - Contact: contact.md
 
 theme:
   name: material
@@ -23,29 +23,23 @@ theme:
     - content.tabs.up
     - content.tabs.down
     - content.tabs.expand
-
-  language: en
+  
+  # Enable Dark Mode and provide default (can be light or dark)
   palette:
-    primary: black
-    accent: blue
-    toggle:
-      icon: menu
-      color: white
-    search: white
-    search_icon: search
-    search_placeholder: Search
-    search_highlight: blue
-    search_focus: blue
-    search_active: blue
-    search_deactive: white
-    search_deactive_text: black
-    search_deactive_background: white
-    search_deactive_border: white
-    search_deactive_shadow: white
-    search_deactive_radius: 5
-    search_deactive_opacity: 
-    
-   
+    # Primary color scheme
+    - scheme: default
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to dark mode
+      primary: white
+      accent: blue
 
-    
-
+    # Dark mode color scheme 
+    - scheme: slate
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode
+      primary: black
+      accent: amber
+  
+  language: en
