feat(main): Implement blog functionality and enhance site structure
This commit introduces several key features and enhancements:

- **Blog Implementation:**
  - Added blog functionality using the `mkdocs-blog` plugin, allowing for easy blog post creation and management.
  - Implemented blog post listing on the homepage and a dedicated blog page.
  - Enabled RSS feed generation for blog posts using the `mkdocs-rss-plugin`.

- **Site Structure and Content:**
  - Created a new "Test" page.
  - Added a new "Recent Blog Posts" section to the homepage.
  - Restructured the `docs` directory to better organize blog posts.

- **Configuration and Dependencies:**
  - Updated `mkdocs.yml` to include plugin configurations and site navigation.
  - Added necessary Python packages to `requirements.txt` for blog functionality and other enhancements.

- **Code Improvement:**
  - Added summaries and categories to blog posts for better organization and display.

- **Other:**
  - Enabled pagination for improved navigation.
  - Enhanced the site's visual appeal with Material theme customizations.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,28 @@
 site_name: MkDocs Demo Site
 
 plugins:
-  - blog
+  - rss:
+      enabled: true
+      match_path: blog/posts/.* # (1)!
+      date_from_meta:
+        as_creation: date
+      categories:
+        - categories
+        - tags # (2)!
+  - search:
+      enabled: true
+  - blog:
+      authors: true
+  - minify:
+      minify_html: true
 
 nav:
   - Home: index.md
-  - Blog: blog/index.md
+  - Blog: 
+    - blog/index.md
   - About: about.md
   - Contact: contact.md
+  - Test: test.md
 
 theme:
   name: material
@@ -29,6 +44,7 @@ theme:
       - content.tabs.down
       - content.tabs.expand
       - navigation.indexes
+      - pagination
   
   # Enable Dark Mode and provide default (can be light or dark)
   palette:
